# languageassistant

./: .buildinfo  .cruft.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENCE  README.md  changelog.html  genindex.html  index.html  main.py  mkdocs.yml  objects.inv  py-modindex.html  pyproject.toml  reference.html  search.html  searchindex.js  setup.cfg
.doctrees/: changelog.doctree  environment.pickle  index.doctree  reference.doctree
.doctrees/_autosummary/: languageassistant.agents.conversation.agent.ConversationAgent.doctree  languageassistant.agents.conversation.agent.doctree  languageassistant.agents.conversation.agent.validate_inputs.doctree  languageassistant.agents.conversation.base.BaseConversationAgent.doctree  languageassistant.agents.conversation.base.doctree  languageassistant.agents.conversation.doctree  languageassistant.agents.conversation.loader.doctree  languageassistant.agents.conversation.loader.load_conversation_agent.doctree  languageassistant.agents.doctree  languageassistant.agents.planner.agent.LessonPlannerAgent.doctree  languageassistant.agents.planner.agent.doctree  languageassistant.agents.planner.base.BasePlannerAgent.doctree  languageassistant.agents.planner.base.doctree  languageassistant.agents.planner.doctree  languageassistant.agents.planner.loader.doctree  languageassistant.agents.planner.loader.load_lesson_planner.doctree  languageassistant.agents.planner.schema.BaseLessonOutputParser.doctree  languageassistant.agents.planner.schema.Lesson.doctree  languageassistant.agents.planner.schema.LessonOutputParser.doctree  languageassistant.agents.planner.schema.doctree  languageassistant.assistant.Assistant.doctree  languageassistant.assistant.doctree  languageassistant.transcriber.BaseTranscriber.doctree  languageassistant.transcriber.MicrophoneNotFoundError.doctree  languageassistant.transcriber.Transcriber.doctree  languageassistant.transcriber.doctree  languageassistant.transcriber.get_transcription.doctree  languageassistant.tts.BaseTTS.doctree  languageassistant.tts.TTS.doctree  languageassistant.tts.doctree  languageassistant.utils.doctree  languageassistant.utils.load_openai_api_key.doctree
.doctrees/getting_started/: contributing.doctree  full_conversation_example.doctree  user_guide.doctree
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cookiecutter.yml  dependencies.yml  deploy_docs.yml  draft_release.yml  release.yml  test.yml
_autosummary/: languageassistant.agents.conversation.agent.ConversationAgent.html  languageassistant.agents.conversation.agent.html  languageassistant.agents.conversation.agent.validate_inputs.html  languageassistant.agents.conversation.base.BaseConversationAgent.html  languageassistant.agents.conversation.base.html  languageassistant.agents.conversation.html  languageassistant.agents.conversation.loader.html  languageassistant.agents.conversation.loader.load_conversation_agent.html  languageassistant.agents.html  languageassistant.agents.planner.agent.LessonPlannerAgent.html  languageassistant.agents.planner.agent.html  languageassistant.agents.planner.base.BasePlannerAgent.html  languageassistant.agents.planner.base.html  languageassistant.agents.planner.html  languageassistant.agents.planner.loader.html  languageassistant.agents.planner.loader.load_lesson_planner.html  languageassistant.agents.planner.schema.BaseLessonOutputParser.html  languageassistant.agents.planner.schema.Lesson.html  languageassistant.agents.planner.schema.LessonOutputParser.html  languageassistant.agents.planner.schema.html  languageassistant.assistant.Assistant.html  languageassistant.assistant.html  languageassistant.transcriber.BaseTranscriber.html  languageassistant.transcriber.MicrophoneNotFoundError.html  languageassistant.transcriber.Transcriber.html  languageassistant.transcriber.get_transcription.html  languageassistant.transcriber.html  languageassistant.tts.BaseTTS.html  languageassistant.tts.TTS.html  languageassistant.tts.html  languageassistant.utils.html  languageassistant.utils.load_openai_api_key.html
_modules/: index.html
_modules/languageassistant/: assistant.html  transcriber.html  tts.html  utils.html
_sources/: index.rst
_sources/_autosummary/: languageassistant.agents.conversation.agent.ConversationAgent.ipynb  languageassistant.agents.conversation.agent.ipynb  languageassistant.agents.conversation.agent.validate_inputs.ipynb  languageassistant.agents.conversation.base.BaseConversationAgent.ipynb  languageassistant.agents.conversation.base.ipynb  languageassistant.agents.conversation.ipynb  languageassistant.agents.conversation.loader.ipynb  languageassistant.agents.conversation.loader.load_conversation_agent.ipynb  languageassistant.agents.ipynb  languageassistant.agents.planner.agent.LessonPlannerAgent.ipynb  (+22 more)
docs/: api_docs.md  conf.py  index.rst  reference.rst  user_guide.md
examples/: main.py
getting_started/: contributing.html  full_conversation_example.html  user_guide.html
languageassistant/: assistant.py  transcriber.py  tts.py  utils.py
(+40 files in other folders)
